cluster/apps/security/authentik/ingressRoute-admin.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-authentik-admin
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: rfc1918
        # - name: authentik
        # - name: websocket-headers
      services:
        - name: authentik
          namespace: security
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: websocket-headers
#   namespace: networking
# spec:
#   headers:
#     customRequestHeaders:
#       X-Forwarded-Proto: "https"
# # ref: https://community.traefik.io/t/websockets-not-working-after-migrating-to-traefik-2-0/1912
