cluster/apps/security/authentik/ingressRoute-forwardauth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-authentik-forwardauth
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    # - match: Host(`auth.${SECRET_DOMAIN}`)
    #   kind: Rule
    #   middlewares:
    #     # - name: rfc1918
    #     - name: authentik
    #   services:
    #     - name: authentik
    #       namespace: authentik
    #       port: 80
    - match: Host(`auth.${SECRET_DOMAIN}`) && PathPrefix(`/akprox/`)"
      kind: Rule
      middlewares:
        # - name: rfc1918
        - name: authentik
      services:
        - name: authentik-outpost-example-outpost
          port: 9000

  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
