cluster/apps/security/authentik/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-authentik
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
      #   - name: rfc1918
        - name: authentik
      priority: 10
      services:
        - name: authentik
          namespace: authentik
          port: 80
    - match: Host(`auth.${SECRET_DOMAIN`) && PathPrefix(`/akprox/`)"
      kind: Rule
      priority: 15
      services:
        - name: authentik-outpost-example-outpost
          port: 9000

  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
